--- a/index.html
+++ b/index.html
@@ -146,12 +146,44 @@
     </div>
     
     </div>
-    
 
    </main>
 
-   <footer></footer>
-   
+
+
+
+
+
+   <footer>
+    <div class="footerGroup">
+        <h2 class="footTitle">Customer Care</h2>
+        <ul>
+            <li><a href="account/">Account</a></li>
+            <li><a href="orders/">Orders</a></li>
+            <li><a href="policies/">Policies</a></li>
+            <li><a href="credit/">Credit</a></li>
+            <li><a href="help/">Help</a></li>
+        </ul>
+    </div>
+    <div class="footerGroup">
+        <h2 class="footTitle">Sales</h2>
+        <ul>
+            <li><a href="seller/">Become a Seller</a></li>
+            <li><a href="yourProd/">Manage Your Products</a></li>
+            <li><a href="advertise/"></a></li>
+        </ul>
+    </div>
+    <div class="footerGroup">
+        <h2 class="footTitle">About</h2>
+        <ul>
+            <li><a href="careers/">Careers</a></li>
+            <li><a href="history/">Our History</a></li>
+            <li><a href="press/">Press Releases</a></li>
+            <li><a href="tour/">Take a Tour</a></li>
+        </ul>
+    </div>
+   </footer>
+
 
 
 </body>
